--- a/client/App.scss
+++ b/client/App.scss
@@ -2,20 +2,23 @@
     text-align: center;
   }
   
+  /*
   .App-logo {
     height: 40vmin;
     pointer-events: none;
   }
+  */
   
+  /*
   @media (prefers-reduced-motion: no-preference) {
     .App-logo {
       animation: App-logo-spin infinite 20s linear;
     }
   }
+  */
   
   .App-header {
     background-color: #282c34;
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,9 +27,11 @@
     color: white;
   }
   
+  /*
   .App-link {
     color: #61dafb;
   }
+  
   
   @keyframes App-logo-spin {
     from {
@@ -36,11 +41,13 @@
       transform: rotate(360deg);
     }
   }
+*/
 
   .react-flow {
     /*
     background: rgb(244,180,0);
     background: linear-gradient(90deg, rgba(244,180,0,1) 0%, rgba(219,68,55,1) 100%); 
     */
+
     background:#212121;
   }
