--- a/client/App.scss
+++ b/client/App.scss
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: 'Aeonik';
+  src: local('Aeonik-Bold'), url('./assets/Aeonik/Aeonik-Bold.otf') format('otf');
+  src: local('Aeonik-Regular'), url('./assets/Aeonik/Aeonik-Regular.otf') format('otf');
+}
+
+@font-face {
+  font-family: 'HandoSoft';
+  src: local('HandoSoft-Regular'), url('./assets/Hando\ Soft/HandoSoft-Regular.ttf') format('ttf');
+  src: local('HandoSoft-Medium'), url('./assets/Hando\ Soft/HandoSoft-Medium.ttf') format('ttf');
+}
+
 .App {
     /*text-align: center;*/
     width: 100vw;
@@ -73,9 +85,8 @@
 
   .analytics-header p {
       color: rgb(164, 162, 162);
-      font-family: HelveticaNeue;
-      font-weight: light;
-      font-size: medium;
+      font-family: HandoSoft-Medium;
+      font-size: 15px;
       margin-top: 2rem;
       margin-left: 0rem;
       margin-bottom: 0px;
@@ -84,16 +95,16 @@
   .analytics-header h2 {
     margin-top: 0px;
     color: black;
-    font-family: Helvetica;
-    font-weight: bold;
+    font-family: Aeonik-Bold;
+    font-size: 20px;
     margin-left: 0rem;
   }
 
   .analytics-overview-header h2 {
     margin-top: 2rem;
     color: black;
-    font-family: Helvetica;
-    font-weight: bold;
+    font-family: Aeonik-Bold;
+    font-size: 20px;
     margin-left: 0rem;
   }
 
