--- a/client/App.scss
+++ b/client/App.scss
@@ -81,6 +81,16 @@
   .vertical-nav {
     background-color: #fff;
     border-radius: 30px 0px 0px 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+  }
+
+  .vertical-nav img {
+    width: 30px;
+    height: auto;
+    margin-bottom: 60px;
   }
 
   .analytics-header p {
