completed tab integration. still working on state issues 9/24/22 13:00 PST

--- a/client/AnalyticsTile.scss
+++ b/client/AnalyticsTile.scss
@@ -33,7 +33,7 @@
 
 .tile-value {
     font-size: 50px;
-    margin-top: 2rem;
+    margin-top: .5rem;
     font-family: HandoSoft-Black;
 }
 
@@ -41,7 +41,7 @@
     font-size: 17px;
     font-weight: bold;
     text-transform: uppercase;
-    margin-top: 12px;
+    margin-top: 5px;
     color: black;
 }
 
@@ -50,6 +50,6 @@
     text-align: center;
     width: 235px;
     font-size: 15px;
-    margin-top: 12px;
+    margin-top: 5px;
 }
 
