--- a/client/AnalyticsTile.scss
+++ b/client/AnalyticsTile.scss
@@ -16,6 +16,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-right: 2rem;
+    
+    padding: 1rem;
     background-color: #fff;
     border-radius: 30px;
     backdrop-filter: blur(5px);
