--- a/client/barChart.css
+++ b/client/barChart.css
@@ -20,3 +20,15 @@
   font-size: 1.5em;
   fill: #635F5D;
 }
+
+.d3Graph {
+  background-color: #fff;
+  border-radius: 30px;
+  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0 10px 20px rgb(179, 197, 234, .75),
+           inset 0px 0px 0px 0px rgba(145, 192, 255, 0.75),
+           inset -4px -4px 8px 0px rgba(145, 193, 255, 0.30),
+           inset 0px 10px 20px 0px rgb(255, 255, 255);
+  padding: 1rem;
+}
