finished styling the tiles and graphing tab

--- a/client/AnalyticsTile.scss
+++ b/client/AnalyticsTile.scss
@@ -57,3 +57,10 @@
     margin-top: 5px;
 }
 
+.analytics-overview-header h2 {
+  margin-top: 1.5rem;
+  color: black;
+  font-family: Aeonik-Bold;
+  font-size: 20px;
+  margin-left: 0rem;
+}
