--- a/client/App.scss
+++ b/client/App.scss
@@ -97,6 +97,14 @@
     margin-left: 0rem;
   }
 
+  .analytics-overview-header-graph h2 {
+    margin-top: 1rem;
+    color: black;
+    font-family: Aeonik-Bold;
+    font-size: 20px;
+    margin-left: 0rem;
+  }
+
 
   .analytics-tiles {
     height:42%;
@@ -105,6 +113,21 @@
     flex-wrap: nowrap;
     overflow-x: auto;
     padding-top: 1rem;
+    margin-left: -1.5rem;
+    padding-left: 1.5rem;
+
+    .tile {
+      flex: 0 0 auto;
+    }
+  } 
+
+  .analytics-tiles-graph {
+    height:42%;
+    width: 102.4%;
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    padding-top: rem;
     margin-left: -1.5rem;
     padding-left: 1.5rem;
 
