--- a/client/style/AnalyticsTile.scss
+++ b/client/style/AnalyticsTile.scss
@@ -1,14 +1,14 @@
 @font-face {
     font-family: 'Aeonik';
-    src: local('Aeonik-Bold'), url('./assets/Aeonik/Aeonik-Bold.otf') format('otf');
-    src: local('Aeonik-Regular'), url('./assets/Aeonik/Aeonik-Regular.otf') format('otf');
+    src: local('Aeonik-Bold'), url('../assets/Aeonik/Aeonik-Bold.otf') format('otf');
+    src: local('Aeonik-Regular'), url('../assets/Aeonik/Aeonik-Regular.otf') format('otf');
   }
   
   @font-face {
     font-family: 'HandoSoft';
-    src: local('HandoSoft-Regular'), url('./assets/Hando\ Soft/HandoSoft-Regular.ttf') format('ttf');
-    src: local('HandoSoft-Medium'), url('./assets/Hando\ Soft/HandoSoft-Medium.ttf') format('ttf');
-    src: local('HandoSoft-Black'), url('./assets/Hando\ Soft/HandoSoft-Black.ttf') format('ttf');
+    src: local('HandoSoft-Regular'), url('../assets/Hando\ Soft/HandoSoft-Regular.ttf') format('ttf');
+    src: local('HandoSoft-Medium'), url('../assets/Hando\ Soft/HandoSoft-Medium.ttf') format('ttf');
+    src: local('HandoSoft-Black'), url('../assets/Hando\ Soft/HandoSoft-Black.ttf') format('ttf');
   }
 
 .Analytics-Tile {
