--- a/client/style/App.scss
+++ b/client/style/App.scss
@@ -1,13 +1,13 @@
 @font-face {
   font-family: 'Aeonik';
-  src: local('Aeonik-Bold'), url('./assets/Aeonik/Aeonik-Bold.otf') format('otf');
-  src: local('Aeonik-Regular'), url('./assets/Aeonik/Aeonik-Regular.otf') format('otf');
+  src: local('Aeonik-Bold'), url('../assets/Aeonik/Aeonik-Bold.otf') format('otf');
+  src: local('Aeonik-Regular'), url('../assets/Aeonik/Aeonik-Regular.otf') format('otf');
 }
 
 @font-face {
   font-family: 'HandoSoft';
-  src: local('HandoSoft-Regular'), url('./assets/Hando\ Soft/HandoSoft-Regular.ttf') format('ttf');
-  src: local('HandoSoft-Medium'), url('./assets/Hando\ Soft/HandoSoft-Medium.ttf') format('ttf');
+  src: local('HandoSoft-Regular'), url('../assets/Hando\ Soft/HandoSoft-Regular.ttf') format('ttf');
+  src: local('HandoSoft-Medium'), url('../assets/Hando\ Soft/HandoSoft-Medium.ttf') format('ttf');
 }
 
 .App {
