--- a/client/style/App.scss
+++ b/client/style/App.scss
@@ -1,136 +1,140 @@
-@font-face {
-  font-family: 'Aeonik';
-  src: local('Aeonik-Bold'), url('../assets/Aeonik/Aeonik-Bold.otf') format('otf');
-  src: local('Aeonik-Regular'), url('../assets/Aeonik/Aeonik-Regular.otf') format('otf');
-}
-
+/* create custom font face for titles/larger text*/
 @font-face {
   font-family: 'HandoSoft';
   src: local('HandoSoft-Regular'), url('../assets/Hando\ Soft/HandoSoft-Regular.ttf') format('ttf');
   src: local('HandoSoft-Medium'), url('../assets/Hando\ Soft/HandoSoft-Medium.ttf') format('ttf');
 }
 
-
-.App {
-    width: 100vw;
-    height: 100vh;
-    background-image: linear-gradient(
-      135deg,
-      hsl(0deg 0% 100%) 0%,
-      hsl(223deg 57% 98%) 13%,
-      hsl(223deg 57% 96%) 27%,
-      hsl(222deg 57% 94%) 40%,
-      hsl(222deg 57% 92%) 52%,
-      hsl(222deg 57% 90%) 64%,
-      hsl(221deg 57% 87%) 75%,
-      hsl(221deg 57% 85%) 85%,
-      hsl(221deg 57% 83%) 93%,
-      hsl(220deg 57% 81%) 100%
-    );
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-width: 1000px;
-  }
-  
-
-  .Dashboard {
-    width: 90%;
-    height: 90%;
-    border-radius: 30px;
-    background-color: #FAFBFF;
-    box-shadow: 0 10px 20px rgb(179, 197, 234, .75);
-  }
-  
-  .react-flow-rectangle {
-    width: 99.5%;
-    height: 100%;
-    background-color: #fff;
-    border-radius: 30px;
-    backdrop-filter: blur(5px);
-    background-color: rgba(255, 255, 255, 1);
-    box-shadow: 0 10px 20px rgb(179, 197, 234, .75),
-             inset 0px 0px 0px 0px rgba(145, 192, 255, 0.75),
-             inset -4px -4px 8px 0px rgba(145, 193, 255, 0.30),
-             inset 0px 10px 20px 0px rgb(255, 255, 255);
-  }
-
-  .container {
-    margin-left: 3rem;
-  }
-
-  .analytics-header p {
-      color: rgb(164, 162, 162);
-      font-family: HandoSoft-Medium;
-      font-size: 15px;
-      margin-left: 0rem;
-      margin-bottom: 0px;
-  }
-
-  .analytics-header h2 {
-    margin-top: 0px;
-    color: black;
-    font-family: Aeonik-Bold;
-    font-size: 20px;
-    margin-left: 0rem;
-  }
-
-  .analytics-overview-header h2 {
-    margin-top: 1.5rem;
-    color: black;
-    font-family: Aeonik-Bold;
-    font-size: 20px;
-    margin-left: 0rem;
-  }
-
-  .analytics-overview-header-graph h2 {
-    margin-top: 1rem;
-    color: black;
-    font-family: Aeonik-Bold;
-    font-size: 20px;
-    margin-left: 0rem;
-  }
-
-
-  .analytics-tiles {
-    height:42%;
-    width: 102.4%;
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    box-sizing: border-box;
-
-    .tile {
-      flex: 0 0 auto;
-    }
-  } 
-
-  .analytics-tiles-graph {
-    height:42%;
-    width: 102.4%;
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: auto;
-    padding-top: rem;
-    margin-left: -1.5rem;
-    padding-left: 1.5rem;
-
-    .tile {
-      flex: 0 0 auto;
-    }
-  } 
-
-  .analytics-tiles::-webkit-scrollbar {
-    display: none;
-  }
-
-  
-  .react-flow__attribution {
-    visibility: hidden;
+/* create custom font face for subtitles*/
+@font-face {
+  font-family: 'Aeonik';
+  src: local('Aeonik-Bold'), url('../assets/Aeonik/Aeonik-Bold.otf') format('otf');
+  src: local('Aeonik-Regular'), url('../assets/Aeonik/Aeonik-Regular.otf') format('otf');
 }
 
+/* styling for overall App.jsx component*/
+.App {
+  /* default width and height */
+  width: 100vw;
+  height: 100vh;
+
+  /* set min width/height for window resizing*/
+  min-width: 1000px;
+  min-height: 800px;
+
+  /* set lightblue gradient as background*/
+  background-image: linear-gradient(
+    135deg,
+    hsl(0deg 0% 100%) 0%,
+    hsl(223deg 57% 98%) 13%,
+    hsl(223deg 57% 96%) 27%,
+    hsl(222deg 57% 94%) 40%,
+    hsl(222deg 57% 92%) 52%,
+    hsl(222deg 57% 90%) 64%,
+    hsl(221deg 57% 87%) 75%,
+    hsl(221deg 57% 85%) 85%,
+    hsl(221deg 57% 83%) 93%,
+    hsl(220deg 57% 81%) 100%
+  );
+  /* flexbox --> direction agnostic --> increase responsivess to page resizing*/
+  display: flex;
+  /* main axis as vertical axis*/
+  flex-direction: column;
+  /* center along main axis, vertically*/
+  justify-content: center;
+  /* center along cross-axis, horizontally*/
+  align-items: center;
+}
+  
+
+.Dashboard {
+  /* 90% of parent div, App*/
+  width: 90%;
+  height: 90%;
+
+  min-width: 950px;
+  /* round corners to fit claymorphism styling */
+  border-radius: 30px;
+  /* background of dashboard is white*/
+  background-color: #FAFBFF;
+  /* shadow to make dashhboard appear as if hovering*/
+  box-shadow: 0 10px 20px rgb(179, 197, 234, .75);
+}
+
+.react-flow-rectangle {
+  width: 99.5%;
+  height: 100%;
+  background-color: #fff;
+  border-radius: 30px;
+  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0 10px 20px rgb(179, 197, 234, .75),
+            inset 0px 0px 0px 0px rgba(145, 192, 255, 0.75),
+            inset -4px -4px 8px 0px rgba(145, 193, 255, 0.30),
+            inset 0px 10px 20px 0px rgb(255, 255, 255);
+}
+
+.container {
+  margin-left: 3rem;
+}
+
+.analytics-header p {
+    color: rgb(164, 162, 162);
+    font-family: HandoSoft-Medium;
+    font-size: 15px;
+    margin-left: 0rem;
+    margin-bottom: 0px;
+}
+
+.analytics-header h2 {
+  margin-top: 0px;
+  color: black;
+  font-family: Aeonik-Bold;
+  font-size: 20px;
+  margin-left: 0rem;
+}
+
+.graphPanelWrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.analytics-overview-header h2 {
+  margin-top: 1.5rem;
+  color: black;
+  font-family: Aeonik-Bold;
+  font-size: 20px;
+  margin-left: 0rem;
+}
+
+.analytics-tiles {
+  height:42%;
+  width: 102.4%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  box-sizing: border-box;
+
+  .tile {
+    flex: 0 0 auto;
+  }
+} 
+
+/* remove horizontal scroll bars from analytics tile div*/
+.analytics-tiles::-webkit-scrollbar {
+  display: none;
+}
+
+/* hide the reactflow watermark/attribution*/
+.react-flow__attribution {
+  visibility: hidden;
+}
+
+/* top and bottom margin on icons set to 0, left and right margins on auto*/
 .tabIcon {
   margin: 0 auto;
 }
+
+
 
