--- a/client/style/index.scss
+++ b/client/style/index.scss
@@ -1,3 +1,4 @@
+/* fallbacks if borwser does not support custom fonts*/
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,6 +8,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* setting fallback fonts if browser doesn't support custom fonts */
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
