--- a/client/style/AnalyticsTile.scss
+++ b/client/style/AnalyticsTile.scss
@@ -1,9 +1,11 @@
+/* create custom font face for titles/larger text*/
 @font-face {
     font-family: 'Aeonik';
     src: local('Aeonik-Bold'), url('../assets/Aeonik/Aeonik-Bold.otf') format('otf');
     src: local('Aeonik-Regular'), url('../assets/Aeonik/Aeonik-Regular.otf') format('otf');
   }
-  
+
+  /* create custom font face for subtitles*/
   @font-face {
     font-family: 'HandoSoft';
     src: local('HandoSoft-Regular'), url('../assets/Hando\ Soft/HandoSoft-Regular.ttf') format('ttf');
@@ -11,16 +13,20 @@
     src: local('HandoSoft-Black'), url('../assets/Hando\ Soft/HandoSoft-Black.ttf') format('ttf');
   }
 
+/* make each tile a column flexbox */
 .Analytics-Tile {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* center align along main axis, vertically*/
     justify-content: center;
+    /* center align along crosss axis, horizontally */
+    align-items: center;
     margin-right: 2rem;
     
     padding: 1rem;
     background-color: #fff;
     border-radius: 30px;
+    /* claymorphism styling */
     backdrop-filter: blur(5px);
     background-color: rgba(255, 255, 255, 1);
     box-shadow: 0 10px 20px rgb(179, 197, 234, .75),
@@ -29,18 +35,21 @@
              inset 0px 10px 20px 0px rgb(255, 255, 255);
   }
 
+  /* uniform styling and sizing of icons */
   img {
     width: 50px;
     height: auto;
     margin-bottom: 1rem;
   }
 
+/* text styling for the displayed live data */
 .tile-value {
     font-size: 50px;
     margin-top: .5rem;
     font-family: HandoSoft-Black;
 }
 
+/* text styling for the title of the tile*/
 .tile-title {
     font-size: 17px;
     font-weight: bold;
@@ -49,6 +58,7 @@
     color: black;
 }
 
+/* text styling for the description */
 .tile-description {
     font-family: Aeonik-Regular;
     text-align: center;
